# aith_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py  run_build_rag_index.py  run_scraper.py
aith_chatbot/: __init__.py  bot.py  config.py  history.py  knowledge.py  llm.py  rag.py  recommendations.py  scraper.py
data/: ai.md  ai_product.md  knowledge.json  programs.json
